--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Remove as setas do input type=number */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield; /* Firefox */
+}
